--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 test:
   image: node:alpine
   script:
+    - apk add --no-cache curl
     - curl -L https://unpkg.com/@pnpm/self-installer | node
     - pnpm install
     - pnpm run check
